--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Pipe Attach",
             "type": "cppdbg",
             "request": "attach",
-            "program": "/workspaces/fall-2024-cop-3223-assignment1/fracturing.c",
+            "program": "fracturing.c",
             "processId": "${command:pickRemoteProcess}",
             "pipeTransport": {
                 "debuggerPath": "/usr/bin/gdb",
